Changes in Version 2.0.4:
  - Bugfix in svlpredict when an inverse gamma prior is used.
  - Function 'svtpredict' introduced for convenience when estimating
    SV with heavy tails.

Changes in Version 2.0.3:
  - The exported C++ function 'update_svl' can draw posterior values
    with a fixed 'mu'.
  - Controlling the amount of latent variable draws to be stored can now be
    controlled through the 'keeptime' argument to svsample, svsample2,
    svlsample, and svlsample2.

Changes in Version 2.0.2:
  - Bugfix in 'predict.svdraws'

Changes in Version 2.0.1:
  - Introduced a minimalistic 'plot.svpredict' / 'plot.svlpredict'
  - More fine-grained control over the covariance matrix in 'svlsample',
    the default employs an approximate covariance matrix coming from 'svsample'
  - Bugfix in 'predict.svdraws' and minor changes in documentation thereof

Changes in Version 2.0.0:
  - New collaborator: Darjus Hosszejni
  - New functionality:
    - leverage effect through 'svlsample'
    - simulation of asymmetric returns with 'svsim'
    - prediction using designmatrices and heavy-tails
  - Updated functionality:
    - the exported C++ function 'update' uses RcppArmadillo objects and
      it has been renamed to 'update_sv'
    - new examples
  - Bugfix:
    - correct plotting after sampling with 'gammaprior = FALSE'
    - fixed naming of latent states in printing and plotting in the case of time
      series with conditionally heavy-tailed innovations
    - in 'svsample': input check for length of burnin is now fixed (thanks
      to Nikolas Kuschnig)
    - other small fixes
  - Deprecated:
    - functions 'arpredict' and '.svsample'
    - parameter 'thintime' in function 'svsample'

Changes in Version 1.3.4:
  - DESCRIPTION file updated.

Changes in Version 1.3.3:
  - Registered native routines.
  - Thinned graphs in vignette a bit to stay below the required 5MB mark.
  - Workaround for typo appearing in conversion of help files to LaTeX document.