@@ -1,5 +1,6 @@
 # Generated by roxygen2: do not edit by hand
 
+S3method(logret,default)
 S3method(plot,svdraws)
 S3method(plot,svldraws)
 S3method(plot,svlpredict)
