@@ -1,21 +1,11 @@
-#' Computes (de-meaned) log returns.
-#' 
-#' Small utlity function returning either \code{diff(log(x))} in case the
-#' argument \code{demean} is set to \code{FALSE}, or \code{diff(log(x)) -
-#' mean(diff(log(x)))} in case that \code{demean} is \code{TRUE}.
-#' 
-#' 
-#' @param x Real-valued vector.
-#' @param demean A single logical value indicating whether the returns should
-#' be de-meaned. Defaults to \code{FALSE}.
-#' @return A vector of length \code{length(x) - 1}, containing (de-meaned)
-#' returns.
-#' @author Gregor Kastner \email{gregor.kastner@@wu.ac.at}
-#' @keywords utilities
+#' @describeIn logret Log returns of vectors
+#' @family utilities
 #' @export
-logret <- function(x, demean = FALSE) {
-  logretx <- tail(diff(log(x)), length(x)-1)
-  if (isTRUE(demean)) logretx <- logretx - mean(logretx)
+
+logret.default <- function(x, demean = FALSE, standardize = FALSE, ...) {
+  logretx <- tail(diff(log(x)), length(x) - 1)
+  if (all(isTRUE(demean))) logretx <- logretx - mean(logretx)
+  if (all(isTRUE(standardize))) logretx <- logretx / sd(logretx)
   logretx
 }
 
