@@ -1,27 +1,36 @@
 % Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/utilities_svdraws.R
+% Please edit documentation in R/generics.R, R/utilities_svdraws.R
 \name{logret}
 \alias{logret}
-\title{Computes (de-meaned) log returns.}
+\alias{logret.default}
+\title{Computes the log returns of a time series}
 \usage{
-logret(x, demean = FALSE)
+logret(dat, demean = FALSE, standardize = FALSE, ...)
+
+\method{logret}{default}(x, demean = FALSE, standardize = FALSE, ...)
 }
 \arguments{
-\item{x}{Real-valued vector.}
+\item{dat}{The raw data.}
 
-\item{demean}{A single logical value indicating whether the returns should
-be de-meaned. Defaults to \code{FALSE}.}
+\item{demean}{Logical value indicating whether the data should
+be de-meaned.}
+
+\item{standardize}{Logical value indicating whether the data should
+be standardized (in the sense that each component series has an empirical
+variance equal to one).}
+
+\item{...}{Ignored.}
 }
 \value{
-A vector of length \code{length(x) - 1}, containing (de-meaned)
-returns.
+Log returns of the (de-meaned / standardized) data.
 }
 \description{
-Small utlity function returning either \code{diff(log(x))} in case the
-argument \code{demean} is set to \code{FALSE}, or \code{diff(log(x)) -
-mean(diff(log(x)))} in case that \code{demean} is \code{TRUE}.
+\code{logret} computes the log returns of a time
+series, with optional de-meaning and/or standardization.
 }
-\author{
-Gregor Kastner \email{gregor.kastner@wu.ac.at}
-}
-\keyword{utilities}
+\section{Methods (by class)}{
+\itemize{
+\item \code{default}: Log returns of vectors
+}}
+
+\concept{utilities}
