@@ -2,6 +2,7 @@ Changes in Version 2.0.4:
   - Bugfix in svlpredict when an inverse gamma prior is used.
   - Function 'svtpredict' introduced for convenience when estimating
     SV with heavy tails.
+  - New generic: logret; old logret is now logret.default
 
 Changes in Version 2.0.3:
   - The exported C++ function 'update_svl' can draw posterior values
